# Notebooks

./: .gitignore  README.md  pyproject.toml
TensorFlow/: .gitignore  Audio GAN.ipynb  Champion GAN.ipynb  Code generation with an RNN 2.ipynb  Code generation with an RNN.ipynb  K-means elbow clustering.ipynb  LoL toxicity generation with an RNN.ipynb  MNIST GAN.ipynb  Music generation with PCA and GRU.ipynb  Music generation with PCA and deep GRU.ipynb  Music generation with single layer GRU.ipynb  Text generation with an RNN.ipynb
TensorFlow/data/: .gitignore
notebooks/tf/: scheduler.py
