[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Mythic <mythicmaniac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
pandas = "^1.0.1"
keras = "^2.3.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
jupytext = "^1.3.4"
jupyter = "^1.0.0"
notebook = "^6.0.3"
jupyter-tabnine = "^1.0.2"
python-language-server = "^0.31.8"
scikit-learn = "^0.22.1"
tensorflow-datasets = "^2.1.0"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
